2-poc/2-1-maintrack/templates/networking/web-vnet-nsg.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "web_west2_vnet_addressSpace": {
            "type": "string",
            "metadata": {
                "description": "Web West2 Vnet Address space"
            }
        },
        "web_west2_subnet_addressrange": {
            "type": "string",
            "metadata": {
                "description": "Web West2 Subnet Address Range"
            }
        },
        "location": {
            "type": "string",
            "defaultValue": "[resourceGroup().location]",
            "metadata": {
                "description": "Location for all resources"
            }
        },
        "hub_wets2_vnet_addressSpace": {
            "type": "string",
            "metadata": {
                "description": "Hub West2 Vnet Address space"
            }
        }
    },
    "variables": {
        "WebVnetName": "web-west2-vnet",
        "WebSubnetName": "web-west2-sn",
        "WebNsgName": "web-west2-nsg"
    },
    "resources": [
        {
            "apiVersion": "2018-08-01",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('WebNsgName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowRDPandHTTPIn",
                        "properties": {
                            "description": "Allow RDP and HTTP from Hub Vnet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRanges": [
                                "3389",
                                "80"
                            ],
                            "sourceAddressPrefix": "[parameters('hub_wets2_vnet_addressSpace')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "AllowHTTPIn",
                        "properties": {
                            "description": "Allow HTTP-80 from Internet",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2018-08-01",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('WebVnetName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('WebNsgName'))]"
            ],
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('web_west2_vnet_addressSpace')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('WebSubnetName')]",
                        "properties": {
                            "addressPrefix": "[parameters('web_west2_subnet_addressrange')]",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('WebNsgName'))]"
                            }
                        }
                    }
                ]
            }
        }
    ]
}
